# jefvantongerloo.alcatel

./: CHANGELOG.md  README.md  galaxy.yml  pyproject.toml  requirements.txt
meta/: runtime.yml
plugins/cliconf/: aos.py
plugins/modules/: device_info.py
plugins/terminal/: aos.py
